samples/_failures_safe/1761145522_fecabb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f7dfae7a.c: In function ‘main’:
./samples/SAFE/__tmp_f7dfae7a.c:159:20: error: missing terminating " character
  159 |             printf("Invalid input format.\
      |                    ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f7dfae7a.c:159:13: error: expected expression at end of input
  159 |             printf("Invalid input format.\
      |             ^~~~~~
./samples/SAFE/__tmp_f7dfae7a.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f7dfae7a.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f7dfae7a.c:159:13: error: expected declaration or statement at end of input
